--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ ram
 <body>
 <p>hari</p>
 <h1>om namah shivaya</h1>
+<h3>new feature added by other person</h3>
 <h2>new tag added</h2>
 </body>
 </html>
